# tese_ai

./: .gitignore  .gitleaks.toml  AGENTS.md  README.md  SECURITY.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_refino_dimensoes.py  0003_indices_fk_e_cache.py  0004_job_runs.py  0005_multiativo.py  0006_tese_profunda.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  limits.py  logging.py  ratelimit.py
backend/app/db/: base.py  session.py
backend/app/models/: models.py
backend/app/observability/: langfuse_client.py
backend/tests/: test_anbima_ettj.py  test_aneel.py  test_ativos_precisa_ingest.py  test_avaliacao.py  test_avaliacao_gate_v3.py  test_avaliacao_redteam_v3.py  test_cache_reaper.py  test_commodities.py  test_config.py  test_config_tese_profunda.py  test_consenso.py  test_correlacao.py  test_cotahist.py  test_criar_tese_classe.py  test_cvm_cadastro.py  test_dados.py  test_dados_contas.py  test_derivadas.py  test_elos_por_classe.py  test_fii_dados.py  test_focus.py  test_guard_httpx_direto.py  test_health.py  test_http_client.py  test_identidade.py  test_ifdata.py  test_ingest_orquestracao.py  test_integracao_tese.py  test_macro_expandido.py  test_macro_global.py  test_metricas_setor.py  test_models_schema.py  test_models_schema_0005.py  test_models_schema_0006.py  test_motor_multiativo.py  test_paralelo.py  test_pipeline_tese_profunda.py  test_planos_contas.py  test_proventos_b3.py  test_ratelimit_redis.py  (+11 more)
(+209 files in other folders)
